--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,19 @@
+#buttons {
+  margin: 2%;
+}
+
 .bear-img {
   width: 50%;
+  margin-bottom: 3%;
+}
+
+.container {
+  text-align: center;
+  margin-top: 5%;
 }
 
 body {
   background-image: url(https://hub.umd.edu/sites/default/files/2019-04/image/forest-grass-nature-158251_1920x1080.jpg);
+  color: white;
 }
+
